[package]
name = "jpassword"
version = "0.1.0"
authors = ["Jeremie Amano <amanojeremie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-cors = "0.2.0"
hex = "0.4.2"
serde = "1.0.106"
serde_json = "1.0.51"
r2d2 = "0.8.8"
r2d2_sqlite = "0.15.0"
ring = "0.16.12"

[dependencies.rusqlite]
version = "0.22.0"
features = ["bundled"]
